added few fixees
