# process/src/main/resources/swagger.yaml
@@ -283,6 +283,9 @@ definitions:
   ObservableProcessResource:
     type: "object"
     properties:
+      processId:
+        type: "integer"
+        format: "int32"
       state:
         type: "string"
         enum:
@@ -302,6 +305,9 @@ definitions:
   ProcessResource:
     type: "object"
     properties:
+      processId:
+        type: "integer"
+        format: "int32"
       processCode:
         type: "string"
       processState:
@@ -357,6 +363,9 @@ definitions:
   UserResource:
     type: "object"
     properties:
+      userId:
+        type: "integer"
+        format: "int32"
       firstName:
         type: "string"
       lastName:
